[WCMSFEQ-755] fixing sprite bleed by eliminating min-height

--- a/CancerGov/_src/StyleSheets/components/_icons.scss
+++ b/CancerGov/_src/StyleSheets/components/_icons.scss
@@ -88,10 +88,10 @@ $text-icon-help-border-size: 2px;
 
 	@include svg-sprite(search);
 	background-color: transparent;
-	min-height: 20px;
+	min-height: auto;
 	//display: block;
 	position: absolute;
 	top: 50%;
-	margin-top: -(20px / 2);
+	margin-top: -10px;
 	right: 1em;
 }
